resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  labels:
    name: backend-svc
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: backend
---
